Adding blog posts on frontend from backend

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1071,3 +1071,8 @@ a.scrollup:hover{
 	background-color:#ED502E;
 	color:#fff;;	
 }
+
+.input-group-btn {
+    width:0px;
+}
+.input-group { width: 100%; }
