--- a/public/views/partials/post.html
+++ b/public/views/partials/post.html
@@ -1,44 +1,63 @@
 <section id="blog" class="container" >
-        <div class="text-center">
-			<div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0.3s">
-				<h2>Blog</h2>					
-			</div>
-			<div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0.6s">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</p>
-			</div>
-		</div>
-
-        <div class="blog" ng-controller="blogController">
+        <div class="blog" ng-controller="getPostController">
             <div class="row">
                  <div class="col-md-8">
-                    <div class="blog-item" ng-repeat="blogpost in blogposts">
+                    <div class="blog-item">
                         <div class="row">
                             <div class="col-xs-12 col-sm-2 text-center">
                                 <div class="entry-meta">
-                                    <span id="publish_date">{{ getDateFormat(blogpost.created_at) | date:'mediumDate'}}</span>
-                                    <span><i class="fa fa-user"></i> <a href="#">{{ blogpost.author.first_name }} {{ blogpost.author.last_name }}</a></span>
-                                    <span><i class="fa fa-comment"></i> <a href="#">{{ blogpost.comments.length }} Comments</a></span>
+                                    <span id="publish_date">{{ getDateFormat(posts.created_at) | date:'mediumDate'}}</span>
+                                    <span><i class="fa fa-user"></i> <a href="#">{{ posts.author.first_name }} {{ posts.author.last_name }}</a></span>
+                                    <span><i class="fa fa-comment"></i> <a href="#">{{ posts.comments.length }} Comments</a></span>
                                 </div>
                             </div>
                                 
                             <div class="col-xs-12 col-sm-10 blog-content">
-                                <a href="#"><img class="img-responsive img-blog" ng-src="images/blog/{{  blogpost.image }}" width="100%" alt="" /></a>
-                                <h4>{{ blogpost.title }}</h4>
-                                <p>{{ blogpost.description }}</p>
-                                <a class="btn btn-primary readmore" ng-href="#/getpost/{{blogpost.id}}">Read More<i class="fa fa-angle-right"></i></a>
+                                <a href="#"><img class="img-responsive img-blog" ng-src="images/blog/{{  posts.image }}" width="100%" alt="" /></a>
+                                <h4>{{ posts.title }}</h4>
+                                <p>{{ posts.content }}</p>
+                                <hr>
+                                    <h3 style="color:#000000">Comments</h3>
+                                <hr>
+                                <!--/.comment list-->
+                                <div class="row" ng-repeat="comment in posts.comments">
+                                    <div class="col-md-12">
+                                        <div>
+                                            <span style="color:#000000"><b>{{ comment.names }}</b><br>
+                                            </span>
+                                        </div>
+                                        <p>{{ comment.body }}</p>
+                                        <div>
+                                            <span class="label label-success">Posted on {{ comment.created_at }}</span>       
+                                        </div>
+                                        <hr>
+                                    </div>
+                                </div>
+                                <hr>
+                                <!--/.comment form-->
+                                <div class="panel panel-info">
+                                    <div class="panel-body">
+                                        <div  class="form-group">
+                                           <form class="form-inline">
+                                                <div class="form-group">
+                                                    <input type="email" class="form-control" placeholder="Email">
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="text" class="form-control"  placeholder="Names">
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <div class="form-group">
+                                            <textarea placeholder="Write your comment here!" class="form-control" rows="3"></textarea>
+                                        </div>
+                                        <a class="btn btn-xs btn-primary pull-right" href="#">Comments</a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>    
+                        </div>  
                     </div><!--/.blog-item-->
+
                                 
-                    <ul class="pagination pagination-lg">
-                        <li><a href="#"><i class="fa fa-long-arrow-left"></i>Previous Page</a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">Next Page<i class="fa fa-long-arrow-right"></i></a></li>
-                    </ul><!--/.pagination-->
                 </div><!--/.col-md-8-->
 
                 <aside class="col-md-4">
