Update Comments on Posts

--- a/public/views/partials/post.html
+++ b/public/views/partials/post.html
@@ -8,7 +8,7 @@
                                 <div class="entry-meta">
                                     <span id="publish_date">{{ getDateFormat(posts.created_at) | date:'mediumDate'}}</span>
                                     <span><i class="fa fa-user"></i> <a href="#">{{ posts.author.first_name }} {{ posts.author.last_name }}</a></span>
-                                    <span><i class="fa fa-comment"></i> <a href="#">{{ posts.comments.length }} Comments</a></span>
+                                    <span><i class="fa fa-comment"></i> <a href="#">{{ comments.length }} Comments</a></span>
                                 </div>
                             </div>
                                 
@@ -20,11 +20,11 @@
                                     <h3 style="color:#000000">Comments</h3>
                                 <hr>
                                 <!--/.comment list-->
-                                <div class="row" ng-repeat="comment in posts.comments">
+                                <div class="row" ng-repeat="comment in comments">
                                     <div class="col-md-12">
                                         <div>
-                                            <span style="color:#000000"><b>{{ comment.names }}</b><br>
-                                            </span>
+                                            <span style="color:#000000"><b>{{ comment.names }} | {{ comment.email }}</b>
+                                            </span><br><br>
                                         </div>
                                         <p>{{ comment.body }}</p>
                                         <div>
@@ -38,21 +38,23 @@
                                 <div class="panel panel-info">
                                     <div class="panel-body">
                                         <div  class="form-group">
-                                           <form class="form-inline">
+                                           <form name="personForm" novalidate class="form-inline">
                                                 <div class="form-group">
-                                                    <input type="email" class="form-control" placeholder="Email">
+                                                    <input type="email" class="form-control" placeholder="Email" ng-model="commentPost.email">
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="text" class="form-control"  placeholder="Names">
+                                                    <input type="text" class="form-control"  placeholder="Names" ng-model="commentPost.names">
                                                 </div>
-                                            </form>
+                                            
                                         </div>
                                         <div class="form-group">
-                                            <textarea placeholder="Write your comment here!" class="form-control" rows="3"></textarea>
+                                            <textarea placeholder="Write your comment here!" class="form-control" rows="3" ng-model="commentPost.body"></textarea>
                                         </div>
-                                        <a class="btn btn-xs btn-primary pull-right" href="#">Comments</a>
+                                        <button class="btn btn-xs btn-primary pull-right" type="submit" ng-click="saveComment()">Submit</button>
+                                        </form>
                                     </div>
                                 </div>
+
                             </div>
                         </div>  
                     </div><!--/.blog-item-->
