--- a/public/views/partials/blog.html
+++ b/public/views/partials/blog.html
@@ -31,13 +31,15 @@
                     </div><!--/.blog-item-->
                                 
                     <ul class="pagination pagination-lg">
-                        <li><a href="#"><i class="fa fa-long-arrow-left"></i>Previous Page</a></li>
-                        <li class="active"><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">Next Page<i class="fa fa-long-arrow-right"></i></a></li>
+                        <li>
+                            <a href="javascript:void(0)" ng-click="prevPage()">&lsaquo; Prev  {{currentPage}}</a>
+                        </li> 
+                        <li ng-repeat="i in range" ng-class="{active : currentPage == i}">
+                            <a href="javascript:void(0)" ng-click="getPosts(i)">{{i}}</a>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)" ng-click="nextPage()">Next &rsaquo;</a>
+                        </li>
                     </ul><!--/.pagination-->
                 </div><!--/.col-md-8-->
 
