Changes on tables and sendmoney, frontend views

--- a/public/views/partials/blog.html
+++ b/public/views/partials/blog.html
@@ -54,11 +54,8 @@
                         <h3>Categories</h3>
                         <div class="row">
                             <div class="col-sm-6">
-                                <ul class="blog_category">
-                                    <li><a href="#">Computers <span class="badge">04</span></a></li>
-                                    <li><a href="#">Smartphone <span class="badge">10</span></a></li>
-                                    <li><a href="#">Gedgets <span class="badge">06</span></a></li>
-                                    <li><a href="#">Technology <span class="badge">25</span></a></li>
+                                <ul class="blog_category" ng-repeat="category in categories">
+                                    <li><a href="#">{{ category.category }} <span class="badge">{{ category.ct }}</span></a></li>
                                 </ul>
                             </div>
                         </div>                     
@@ -69,7 +66,9 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <ul class="blog_archieve">
-                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> December 2015 <span class="pull-right">(97)</span></a></li>
+                                    <li><a href="javascript:void(0)" ng-model="collapsed" ng-click="collapsed=!collapsed"><i class="fa fa-angle-double-right"></i> December 2015 <span class="pull-right">(97)</span></a>
+                                     <div ng-show="collapsed">I am description for the above title, which was collapsed by default</div>
+                                    </li>
                                     <li><a href="#"><i class="fa fa-angle-double-right"></i> November 2015 <span class="pull-right">(32)</a></li>
                                     <li><a href="#"><i class="fa fa-angle-double-right"></i> October 2015 <span class="pull-right">(19)</a></li>
                                     <li><a href="#"><i class="fa fa-angle-double-right"></i> September 2015 <span class="pull-right">(08)</a></li>
@@ -78,21 +77,6 @@
                         </div>                     
                     </div><!--/.archieve-->
     				
-                    <div class="widget tags">
-                        <h3>Tag Cloud</h3>
-                        <ul class="tag-cloud">
-                            <li><a class="btn btn-xs btn-primary" href="#">Apple</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Barcelona</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Office</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Ipod</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Stock</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Race</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">London</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Football</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Porche</a></li>
-                            <li><a class="btn btn-xs btn-primary" href="#">Gadgets</a></li>
-                        </ul>
-                    </div><!--/.tags-->
     			</aside>  
             </div><!--/.row-->
         </div>
