--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@ body {
 	font-size:14px;
 	font-weight:300;
 	line-height:1.6em;
-	color:#fff;
+	color:#000000;
 	background-color:#fff;
 	overflow-x:hidden;
 }
@@ -1076,3 +1076,12 @@ a.scrollup:hover{
     width:0px;
 }
 .input-group { width: 100%; }
+
+a.adisabled {
+  cursor: not-allowed;
+  opacity: .65;
+}
+
+a.adisabled:hover { text-decoration: none; }
+a.adisabled:focus { text-decoration: none; }
+a.adisabled:active { text-decoration: none; }
