--- a/public/views/includes/footer.html
+++ b/public/views/includes/footer.html
@@ -2,7 +2,7 @@
 		<div class="footer">
 			<div class="container">
 				<div class="col-md-4 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.2s">
-					<h2>Multi</h2>
+					<h2>SendMoney</h2>
 					<p>In a elit in lorem congue varius. Sed nec arcu.
 					Etiam sit amet augue.
 					Fusce fermen tum neque a rutrum varius odio pede 
@@ -19,21 +19,21 @@
 				</div>
 				
 				<div class="col-md-4 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.4s">
-					<h3>RECENT POSTS</h3>
+					<h3>Our Services</h3>
 					<ul>
 						<li>Awesome Design with Overviews</li><hr>
 						<li>Great Design with Features </li><hr>
 						<li>Limitless functions & Works </li><hr>
-						<li>Multi is simple and clean design</li>
+						<li>Send Money around the world</li>
 					</ul>
 				</div>
 				
 				<div class="col-md-4 wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">
 					<h3>CONTACT INFO</h3>
 					<ul>
-						<li><i class="fa fa-home fa-2x"></i> Office # 38, Suite 54 Elizebth Street, Victoria State Newyork, USA 33026</li><hr>
-						<li><i class="fa fa-phone fa-2x"></i> +38 000 129900</li><hr>
-						<li><i class="fa fa-envelope fa-2x"></i> info@domain.net</li>
+						<li><i class="fa fa-home fa-2x"></i> Office # 38, 4th Floor, UTC, Kigali Rwanda</li><hr>
+						<li><i class="fa fa-phone fa-2x"></i> +250 72200000</li><hr>
+						<li><i class="fa fa-envelope fa-2x"></i> info@sendmoney.com</li>
 					</ul>
 				</div>
 				
@@ -48,16 +48,15 @@
 					</div>
 					<div class="col-md-6">
 						<ul class="pull-right">
-							<li><a href="#howitworks">How it works</a></li>
-							<li><a href="#aboutus">About us</a></li>
-							<li><a href="#helpsupport">Help & Support</a></li>	
-							<li><a href="#blog">Blog</a></li>	
-							<li><a href="#">Sign in | Join </a></li>	
+							<li><a href="#!/howitworks">How it works</a></li>
+							<li><a href="#!/aboutus">About us</a></li>
+							<li><a href="#!/helpsupport">Help & Support</a></li>	
+							<li><a href="#!/blog">Blog</a></li>	
 						</ul>
 					</div>
 				</div>
 				<div class="pull-right">
-					<a href="#/" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
+					<a href="#!/" class="scrollup"><i class="fa fa-angle-up fa-3x"></i></a>
 				</div>
 			</div>
 		</div>		
