--- a/public/views/partials/blog.html
+++ b/public/views/partials/blog.html
@@ -25,7 +25,7 @@
                                 <a href="#"><img class="img-responsive img-blog" ng-src="images/blog/{{  blogpost.image }}" width="100%" alt="" /></a>
                                 <h4>{{ blogpost.title }}</h4>
                                 <p>{{ blogpost.description }}</p>
-                                <a class="btn btn-primary readmore" ng-href="#/getpost/{{blogpost.id}}">Read More<i class="fa fa-angle-right"></i></a>
+                                <a class="btn btn-primary readmore" ng-href="#!/getpost/{{blogpost.id}}">Read More<i class="fa fa-angle-right"></i></a>
                             </div>
                         </div>    
                     </div><!--/.blog-item-->
