--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -10,20 +10,19 @@
 							<span class="icon-bar"></span>
 						</button>
 						<div class="navbar-brand">
-							<a href="#/"><h1><span>Money</span>Transfer</h1></a>
+							<a href="#!/"><h1><span>Money</span>Transfer</h1></a>
 						</div>
 					</div>
 					
-					<div class="navbar-collapse collapse" ng-controller="mainController">							
+					<div class="navbar-collapse collapse" ng-controller="loginController">							
 						<div class="menu">
 							<ul class="nav nav-tabs" role="tablist">
-								<li role="presentation"><a href="#howitworks">How it works</a></li>
-								<li role="presentation"><a href="#aboutus">About us</a></li>
-								<li role="presentation"><a href="#helpsupport">Help & Support</a></li>	
-								<li role="presentation"><a href="#blog">Blog</a></li>
-                                <li role="presentation" ng-show="isAuthenticated != true"><a href="#login">Login</a></li>
-                                <li role="presentation" ng-show="isAuthenticated != true"><a href="#signup">Sign Up</a></li>
-                                <li class="dropdown" ng-show="isAuthenticated">
+								<li role="presentation"><a href="#!/howitworks">How it works</a></li>
+								<li role="presentation"><a href="#!/aboutus">About us</a></li>
+								<li role="presentation"><a href="#!/helpsupport">Help & Support</a></li>	
+								<li role="presentation"><a href="#!/blog">Blog</a></li>
+								<li role="presentation" ng-if="!$root.user"><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal">Sign in | Sign Up</a></li>
+                                <li class="dropdown" ng-if="$root.user">
                                     <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
                                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                                     </a>
@@ -33,14 +32,129 @@
                                         <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                                         </li>
                                         <li class="divider"></li>
-                                        <li><a href="javascript:void(0)" ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                                        <li><a href="javascript:void(0)" data-ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                                         </li>
                                     </ul>
                                     <!-- /.dropdown-user -->
                                 </li>	
 							</ul>
 						</div>
-					</div>						
+
+						<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <uib-tabset active="activeForm">
+                                            <uib-tab index="0" heading="Login">
+                                            <br>
+                                                <div class="panel panel-default" >
+                                                	<div class="panel-heading">
+                                                		<div class="panel-title">Login</div>
+                                                		<div style="float:right; font-size: 80%; position: relative; top:-10px">
+                                                		    <a href="#">Forgot password?</a>
+                                                		</div>
+                                                	</div>     
+
+                                                	<div style="padding-top:30px" class="panel-body">
+
+                                                		<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+
+                                                		<form id="loginform" class="form-horizontal" role="form" name="loginform" ng-submit="login(account) && loginform.$valid" novalidate>
+
+                                                			<div style="margin-bottom: 25px" class="input-group">
+                                                				<span class="input-group-addon">
+                                                				    <i class="glyphicon glyphicon-user"></i>
+                                                				</span>
+                                                				<input id="login-username" type="text" class="form-control" name="email" value="" placeholder="email" ng-model="account.email">                                        
+                                                			</div>
+
+                                                			<div style="margin-bottom: 25px" class="input-group">
+                                                				<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                                				<input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="account.password">
+                                                			</div>
+                                                			<div class="input-group">
+                                                				<div class="checkbox">
+                                                					<label>
+                                                						<input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
+                                                					</label>
+                                                				</div>
+                                                			</div>
+                                                			<div style="margin-top:10px" class="form-group">
+                                                				<!-- Button -->
+                                                				<div class="col-sm-12 controls">
+                                                					<button type="submit" class="btn btn-primary">Login</button>
+                                                				</div>
+                                                			</div>
+                                                			<div class="form-group">
+                                                				<div class="col-md-12 control">
+                                                					<div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
+                                                						Don't have an account! 
+                                                						<a href="#signup">
+                                                							Sign Up Here
+                                                						</a>
+                                                					</div>
+                                                				</div>
+                                                			</div>    
+                                                		</form>     
+                                                	</div>
+                                                </div>                    
+                                            </uib-tab>
+                                            <uib-tab index="1" heading="Sign Up">
+                                                <br>
+                                                <div class="panel panel-default">
+                                                	<div class="panel-heading">
+                                                		<div class="panel-title">Sign Up</div>
+                                                		<div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="#login">Sign In</a></div>
+                                                	</div>  
+                                                	<div class="panel-body">
+                                                		<form  class="form-horizontal" name="signupform" ng-submit="signup(users) && signupform.$valid" novalidate>
+                                                			<div id="div_id_email" class="form-group required">
+                                                				<label for="id_email" class="control-label col-md-4  requiredField"> E-mail<span class="asteriskField">*</span> </label>
+                                                				<div class="controls col-md-8 ">
+                                                					<input class="input-md emailinput form-control" id="id_email" name="email" placeholder="Your current email address" style="margin-bottom: 10px" type="email" ng-model="users.email"/>
+                                                				</div>     
+                                                			</div>
+                                                			<div id="div_id_password1" class="form-group required">
+                                                				<label for="id_password1" class="control-label col-md-4  requiredField">Password<span class="asteriskField">*</span> </label>
+                                                				<div class="controls col-md-8 "> 
+                                                					<input class="input-md textinput textInput form-control" id="id_password1" name="password1" placeholder="Create a password" style="margin-bottom: 10px" type="password" ng-model="users.password"/>
+                                                				</div>
+                                                			</div>
+                                                			<div id="div_id_password2" class="form-group required">
+                                                				<label for="id_password2" class="control-label col-md-4  requiredField"> Re:password<span class="asteriskField">*</span> </label>
+                                                				<div class="controls col-md-8 ">
+                                                					<input class="input-md textinput textInput form-control" id="id_password2" name="password2" placeholder="Confirm your password" style="margin-bottom: 10px" type="password" ng-model="users.c_password"/>
+                                                				</div>
+                                                			</div>
+                                                			<div class="form-group">
+                                                				<div class="controls col-md-offset-4 col-md-8 ">
+                                                					<div id="div_id_terms" class="checkbox required">
+                                                						<label for="id_terms" class=" requiredField">
+                                                							<input class="input-ms checkboxinput" id="id_terms"  style="margin-bottom: 10px" type="checkbox" name="tos" value="tos" ng-model="users.tos"/>
+                                                							Agree with the <a href="#!/helpsupport" style="color: #ED502E">terms and conditions</a>
+                                                						</label>
+                                                					</div> 
+
+                                                				</div>
+                                                			</div> 
+                                                			<div class="form-group"> 
+                                                				<div class="aab controls col-md-4 "></div>
+                                                				<div class="controls col-md-8 ">
+                                                					<button id="btn-signup" type="submit" class="btn btn-primary"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
+                                                				</div>
+                                                			</div> 
+                                                		</form>
+                                                	</div>
+                                                </div>
+                                            </div> 
+                                            </uib-tab>
+                                        </uib-tabset>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+					</div>		
 				</div>
 			</div>	
 		</nav>	
