--- a/public/views/partials/home_sendmoney.html
+++ b/public/views/partials/home_sendmoney.html
@@ -19,43 +19,50 @@
                     <table class="table table-striped table-bordered table-list" >
                       <thead>
                             <tr>
-                                <th class="hidden-xs">ID</th>
+                                <th class="hidden-xs">#</th>
                                 <th>Receiver Number</th>
                                 <th>Amount</th>
                                 <th>Transaction Status</th>
                                 <th>Transaction Type</th>
-                                <th>Transaction Date</th>
+                                <th>Transaction Date & Time</th>
                             </tr> 
                           </thead>
                           <tbody>
                             <tr ng-repeat="transaction in transactions">
-                              <td class="hidden-xs">1</td>
+                              <td class="hidden-xs">{{$index + 1}}</td>
                               <td>{{transaction.receiver_number}}</td>
                               <td>{{transaction.amount}}</td>
-                              <td>{{transaction.status}}</td>
-                              <td>{{transaction.transaction_type}}</td>
+                              <td>
+                                <div ng-if="transaction.status == 1 ">Successful</div>
+                                <div ng-if="transaction.status == 0 ">Failed</div>
+                              </td>
+                              <td>
+                                <div ng-if="transaction.transaction_type == 'c2m' ">Card to Mobile</div>
+                                <div ng-if="transaction.transaction_type == 'm2m' ">Mobile to Mobile</div>
+                              </td>
                               <td>{{transaction.updated_at}}</td>
                             </tr>
                           </tbody>
                     </table>
                     <div class="panel-footer">
-                      <div class="row">
-                          <div class="col col-xs-4">Page 1 of 5
-                          </div>
-                          <div class="col col-xs-8">
-                            <ul class="pagination hidden-xs pull-right">
-                              <li><a href="#">1</a></li>
-                              <li><a href="#">2</a></li>
-                              <li><a href="#">3</a></li>
-                              <li><a href="#">4</a></li>
-                              <li><a href="#">5</a></li>
-                            </ul>
-                            <ul class="pagination visible-xs pull-right">
-                              <li><a href="#">«</a></li>
-                              <li><a href="#">»</a></li>
-                            </ul>
-                           </div>
+                      <div class="row" ng-hide="transactions.length == 0">
+                        <div class="col col-xs-4">
+                          Page {{currentPage}} of {{totalPages}}
                         </div>
+                        <div class="col col-xs-8">
+                          <ul class="pagination pagination-lg">
+                            <li>
+                              <a href="javascript:void(0)" ng-click="prevPage()">&lsaquo; Prev </a>
+                            </li> 
+                            <li ng-repeat="i in range" ng-class="{active : currentPage == i}">
+                              <a href="javascript:void(0)" ng-click="getTnx(i)">{{i}}</a>
+                            </li>
+                            <li>
+                              <a href="javascript:void(0)" ng-click="nextPage()">Next &rsaquo;</a>
+                            </li>
+                          </ul><!--/.pagination-->
+                        </div>
+                      </div>
                     </div>
                   </div>
                     <!-- Panel -->
